<resources>
    <string name="app_name">Go-Football</string>
    <string name="sign_in">Sign In</string>
    <string name="facebook_app_id">1202817026741823</string>
    <string name="fb_login_protocol_scheme">fb1202817026741823</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <string name="exams_time">Exams Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="Edit_your_information">Edit Your Information</string>
    <string name="enter_your_name">enter your Name</string>
    <string name="enter_your_skills_description">enter your Skills Description</string>
    <string name="save">save</string>
    <string name="Enter_Your_Description">Enter Your Description</string>
    <string name="enter_your_age">enter Your Age</string>
    <string name="enter_your_address">enter Your Phone</string>
    <string name="years">Years</string>
    <string name="upload_your_videos">Upload Your Videos</string>
    <string name="upload_your_images">Upload your Images</string>
    <string name="videos">Videos</string>
    <string name="Images">Images</string>
    <string name="follow">Your Likes Number</string>
    <string name="like">Like</string>
    <string name="log_out">Log Out</string>
    <string name="disLike">DisLike</string>
    <string name="international_news">International News</string>
    <string name="all_news">All news</string>
    <string name="national_news">National News</string>
    <string name="insert_your_information">Insert Your Information</string>
    <string name="comment">Comment</string>
    <string name="id">ID: </string>
    <string name="players">Players</string>
    <string name="new_post">New Post</string>
    <string name="type_your_caption">Type Your Caption</string>
    <string name="comments">Comments</string>
    <string name="type_your_comment">Type Your Comment</string>
    <string name="Message">Message</string>
    <string name="offline">Offline</string>
    <string name="chats">Chats</string>
    <string name="type">Type</string>
    <string name="Gk">GK</string>
    <string name="CB">CB</string>
    <string name="RB">RB</string>
    <string name="LB">LB</string>
    <string name="DMF">DMF</string>
    <string name="CMF">CMF</string>
    <string name="SS">SS</string>
    <string name="AMF">AMF</string>
    <string name="RMF">RWF</string>
    <string name="LWF">LWF</string>
    <string name="CF">CF</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="false">Weather</string>
    <string name="add_Comment">you added comment</string>
    <string name="type_keyword" translatable="false">Type Here</string>
    <string name="Search">Search</string>
    <string name="typing">Typing....</string>
    <string name="Delete">Delete</string>
    <string name="Share">Share</string>
    <string name="Exit">Are You want To Leave?</string>
    <string name="Leave">Exit</string>

</resources>
