<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.fragments.EditInformationFragment"
    android:background="@color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/UserImage"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            />

        <EditText
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:id="@+id/mUserName"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/mSpinner"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:autofillHints="@string/enter_your_skills_description"
            android:gravity="center"
            />
        <EditText
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_age"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:id="@+id/mUserAge"/>
        <EditText
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_address"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:id="@+id/mUserAddress"/>

        <Button
            android:id="@+id/mSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_photo_button"
            android:layout_margin="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>