<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Ui.Activities.AddPost">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mEnd"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:src="@drawable/close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/new_post"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/mPublish"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/post" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText

                android:id="@+id/mCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/type_your_caption"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/mMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/mPostImage"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:visibility="gone"
                    app:riv_corner_radius="10dp" />

                <com.devbrackets.android.exomedia.ui.widget.VideoView
                    android:id="@+id/mPostVideo"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:visibility="gone"
                    app:useDefaultControls="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/Buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/mUploadImage"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_photo_button"
                    android:text="@string/upload_your_images"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/mUploadVideo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"

                    android:background="@drawable/edit_photo_button"
                    android:text="@string/upload_your_videos"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>