<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.fragments.UserProfileFragment"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/UserImage"
                        android:layout_width="100dp"
                        android:layout_gravity="center"
                        android:layout_height="100dp"
                        android:layout_margin="10dp" />

                    <TextView
                        android:gravity="center"
                        android:id="@+id/mUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">
                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/id"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                        <TextView

                            android:id="@+id/mUserId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="15sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/mUserAge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/years"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>


                    <TextView
                        android:gravity="center"
                        android:id="@+id/mUserAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:gravity="center"
                        android:id="@+id/mUserSkills"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/mDisLike"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/dis_like_shap"
                    android:text="@string/disLike"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="normal" />
                <Button
                    android:id="@+id/mLike"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/edit_photo_button"
                    android:text="@string/like"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </RelativeLayout>



            <View
                android:layout_width="wrap_content"
                android:layout_height="1.5dp"
                android:background="@color/colorPrimaryDark"
                android:layout_margin="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Images"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.5dp"
                android:background="@color/colorPrimaryDark"
                android:layout_margin="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:focusable="false"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>